[package]
name = "tools"
version.workspace = true
edition.workspace = true

[features]
default = ["cpu"]

# Minimal build - basic file and shell operations only
minimal = ["file-ops", "shell-ops"]

# CPU build - full functionality without GPU tools
cpu = [
    "minimal",
    "git-ops",
    "web-ops", 
    "plugins",
    "security",
    "wasm-runtime"
]

# GPU build - same as CPU plus advanced WASM features
gpu = ["cpu", "wasm-runtime-advanced"]

# Individual tool categories
file-ops = []
shell-ops = []
git-ops = []
web-ops = ["futures-util"]
plugins = ["llm/cpu"]
security = []
# WASM runtime features for real wasmtime integration
wasm-runtime = ["wasmtime", "wasmtime-wasi"]
wasm-runtime-advanced = ["wasm-runtime"]

# Tests feature to include extended/slow suites
extended-tests = []
legacy-tests = []
disabled-tests = []

[dependencies]
llm = { path = "../llm" }
ai = { path = "../ai" } # P1.3.2: Real AI embeddings integration
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }  # Always included for telemetry and web ops
urlencoding = "2.1"
rand = "0.8"
thiserror = { workspace = true }
num_cpus = "1.15"
common = { path = "../common" }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
base64 = "0.22"  # Always included for signing and encoding
# CRITICAL P0.2.3: Add crypto dependencies for MCP signature verification
sha2 = "0.10"
# CRITICAL P0.2.6: Add chrono for audit timestamps and core for EventBus integration
chrono = { workspace = true }
magray-core = { path = "../core", package = "core" }
wasmtime = "26.0"
wasmtime-wasi = "26.0"
# P1.2.8: Additional crypto for tool signing (in real implementation)
# ring = "0.17"  # Commented out for demo implementation
# P1.2.9: Unix libc for process signals
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# P1.2.1.a: Wasmtime dependencies for real WASM runtime
wasmtime = { version = "26.0", optional = true, default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = { version = "26.0", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.0"
