[workspace]
members = [
    "crates/cli",
    "crates/llm",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["You <you@example.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
indicatif = "0.17"
console = "0.15"
tokio-stream = "0.1"
