[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magray"
path = "src/main.rs"

[dependencies]
magray_core = { path = "../core" }
memory = { path = "../memory" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
