[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magray"
path = "src/main.rs"

[dependencies]
llm = { path = "../llm" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
