[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magray"
path = "src/main.rs"

[dependencies]
llm = { path = "../llm" }
tools = { path = "../tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
