[package]
name = "magray_core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
