[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
magray_core = { path = "../core" }
memory = { path = "../memory" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
