[package]
name = "memory"
version.workspace = true
edition.workspace = true

[dependencies]
magray_core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
