[package]
name = "router"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
llm = { path = "../llm" }
tools = { path = "../tools" }