[package]
name = "tools"
version.workspace = true
edition.workspace = true

[dependencies]
llm = { path = "../llm" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
syntect = { workspace = true }
ureq = { workspace = true }
ignore = { workspace = true }
tempfile = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
async-trait = { workspace = true }